# kanade

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
src/: agent.rs  cli.rs  key_emitter.rs  listener.rs  main.rs  permission.rs  plist.rs  tap_resolver.rs
templates/: agent.plist
