[package]
name = "kanade"
version = "0.1.2"
edition = "2024"
description = "Switch macOS input source to 英数/かな with the left/right Command keys"
repository = "https://github.com/candy12t/kanade"
homepage = "https://github.com/candy12t/kanade"
license = "MIT"
publish = false

# dist must be re-enabled explicitly because `publish = false` opts the
# package out of dist by default.
[package.metadata.dist]
dist = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
core-foundation = "0.10.1"
core-graphics = "0.25.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
